# ai-guide-creator

./: .env.example  .gitignore  CLAUDE.md  README.md  TESTING.md  pyproject.toml
.github/workflows/: ci.yml
documents/: sample_notes.md
output/: getting_started_guide.md
src/guide_creator_flow/: chatbot.py  main.py  tool_registry.py
src/guide_creator_flow/crews/enrichment_crew/: enrichment_crew.py
src/guide_creator_flow/crews/enrichment_crew/config/: agents.yaml  tasks.yaml
src/guide_creator_flow/crews/qa_crew/: qa_crew.py
src/guide_creator_flow/crews/qa_crew/config/: agents.yaml  tasks.yaml
src/guide_creator_flow/crews/research_crew/: research_crew.py
src/guide_creator_flow/crews/research_crew/config/: agents.yaml  tasks.yaml
src/guide_creator_flow/crews/writing_crew/: writing_crew.py
src/guide_creator_flow/crews/writing_crew/config/: agents.yaml  tasks.yaml
src/guide_creator_flow/skills/beginner-guide-style/: SKILL.md
src/guide_creator_flow/skills/grounded-citation-answering/: SKILL.md
src/guide_creator_flow/skills/source-extraction-fidelity/: SKILL.md
src/guide_creator_flow/tools/: citation_guardrail_tool.py  research_quality_scorer_tool.py  topic_inference_tool.py  youtube_transcript_tool.py
tests/chatbot/: test_intent_routing.py
tests/crews/: test_crew_wiring.py
tests/flow/: test_flow_end_to_end.py  test_flow_nodes.py  test_get_inputs.py
tests/tools/: test_citation_guardrail_tool.py  test_research_quality_scorer_tool.py  test_topic_inference_tool.py  test_youtube_transcript_tool.py
