[project]
name = "guide_creator_flow"
version = "0.1.0"
description = "guide_creator_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,tools]==1.14.4",
    "crewai-tools==1.14.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "voyageai>=0.4.1",
    "youtube-transcript-api>=1.2.4",
    "firecrawl-py>=1.0.0",
]

[project.scripts]
kickoff = "guide_creator_flow.main:kickoff"
run_crew = "guide_creator_flow.main:kickoff"
plot = "guide_creator_flow.main:plot"
run_with_trigger = "guide_creator_flow.main:run_with_trigger"
chat = "guide_creator_flow.chatbot:launch_chatbot_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "openai>=1.0.0",
]
